# CGA-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
doc/: README.html  References.md  Report.html  Report.md
include/devices/: DeviceManager.hpp  Gamepad.hpp  Keyboard.hpp  Mouse.hpp  Window.hpp
include/graphics/: Context.hpp  Entity.hpp  Framebuffer.hpp  Icon.hpp  Instance.hpp  Material.hpp  Mesh.hpp  Model.hpp  Program.hpp  Scene.hpp  Shader.hpp  ShadowMap.hpp  Shape.hpp  Texture.hpp  Vertex.hpp
include/graphics/lights/: AmbientLight.hpp  Attenuation.hpp  DirectionalLight.hpp  PointLight.hpp  SpotLight.hpp
include/objects/: Gate.hpp  Maze.hpp  Movable.hpp  Player.hpp
include/physics/: AABB.hpp  BoundingBox.hpp  Collision.hpp
include/util/: Cache.hpp  Camera.hpp  Files.hpp  Log.hpp  Timer.hpp
res/config/: welcome.txt
res/models/: arrow.dae  floor.fbx  gate-part1.fbx  gate-part2.fbx  gate-part3.fbx  gate-part4.fbx  house.fbx  key.fbx  pawn.fbx  pedestal.dae  scene.fbx  wall.fbx
res/models/player/: Human_grabbing_1.fbx  Human_grabbing_10.fbx  Human_grabbing_11.fbx  Human_grabbing_12.fbx  Human_grabbing_13.fbx  Human_grabbing_14.fbx  Human_grabbing_15.fbx  Human_grabbing_16.fbx  Human_grabbing_17.fbx  Human_grabbing_18.fbx  Human_grabbing_19.fbx  Human_grabbing_2.fbx  Human_grabbing_20.fbx  Human_grabbing_21.fbx  Human_grabbing_22.fbx  Human_grabbing_23.fbx  Human_grabbing_24.fbx  Human_grabbing_25.fbx  Human_grabbing_26.fbx  Human_grabbing_27.fbx  Human_grabbing_28.fbx  Human_grabbing_29.fbx  Human_grabbing_3.fbx  Human_grabbing_30.fbx  Human_grabbing_31.fbx  Human_grabbing_32.fbx  Human_grabbing_33.fbx  Human_grabbing_34.fbx  Human_grabbing_35.fbx  Human_grabbing_36.fbx  Human_grabbing_37.fbx  Human_grabbing_38.fbx  Human_grabbing_39.fbx  Human_grabbing_4.fbx  Human_grabbing_40.fbx  Human_grabbing_41.fbx  Human_grabbing_42.fbx  Human_grabbing_43.fbx  Human_grabbing_44.fbx  Human_grabbing_45.fbx  (+74 more)
res/scenes/: Dragon.mtl  scene.mtl  scene_spot.dae
res/shaders/: debug_fragment.glsl  fragment.glsl  icon_fragment.glsl  icon_vertex.glsl  shadow.glsl  shadow_vertex.glsl  vertex.glsl
res/textures/: pawn.dae
scripts/: blender_animation_export.py  toon_map_generator.py
src/: Main.cpp
src/devices/: DeviceManager.cpp  Gamepad.cpp  Keyboard.cpp  Mouse.cpp  Window.cpp
src/graphics/: Context.cpp  Entity.cpp  Framebuffer.cpp  Icon.cpp  Instance.cpp  Material.cpp  Mesh.cpp  Model.cpp  Program.cpp  Scene.cpp  Shader.cpp  ShadowMap.cpp  Shape.cpp  Texture.cpp  Vertex.cpp
src/graphics/lights/: AmbientLight.cpp  Attenuation.cpp  DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
src/objects/: Gate.cpp  Maze.cpp  Movable.cpp  Player.cpp
src/physics/: AABB.cpp  BoundingBox.cpp  Collision.cpp
src/util/: Camera.cpp  Files.cpp  Log.cpp  Timer.cpp
